null is disabled

--- a/PokemonReviewApp.csproj
+++ b/PokemonReviewApp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>2750db6d-d62c-42a6-a1b2-fa00a5ece38a</UserSecretsId>
