fake connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseKeys" : "";
+    "DatabaseKeys" : "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword"
   }
 }
