--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseKeys" : "Server=myServerAddress;Database=myDataBase;User Id=myUsername;Password=myPassword"
+    "DatabaseKeys": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Database=PokemonReview;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
